# albumize

./: README.md  pyproject.toml
frontend/: package.json
src/albumize/: cli.py  const.py  core.py
src/albumize/templates/: base.jinja  normalize.jinja
