[tool.poetry]
name = "albumize"
version = "0.1.0"
description = ""
authors = ["Michael Van Wickle <mvanwickle@gmail.com>"]
license = "MIT"
include = [
    "**/*.jinja"
]

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"
jinja2 = "^2.11.2"

[tool.poetry.dev-dependencies]
pre-commit = "^2.9.3"
pytest = "^6.2.1"

[tool.poetry.scripts]
albumize = "albumize.cli:cli"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
